--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -27,7 +27,7 @@
                     <h4><strong>Description:</strong></h4>
                     <p>{{ description }}</p><br>
                 {% endif %}
-                <h4><strong>Tags:<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></strong></h4>
+                <h4><strong>Tags<img alt="help text as title" title="{{ all_help.4.answer }}" src="{% static 'images/help.png' %}"/></strong></h4>
                 {% if other_tags %}
                     {% for tag in other_tags %}
                         <a href="{% url 'tag' tag.id %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
@@ -70,7 +70,7 @@
                     <a {% if files_resource %}download{% endif %} class="btn btn-block btn-primary" href="{% url 'download' resource.id %}">{% if downloaded %}Re-{% endif %}{{label}}</a>
 			          {% endif %}
                 <a class="btn btn-block btn-warning" href="{% url 'evolve' resource.id %}">Evolve</a>
-                <a class="btn btn-block btn-success" href="{% url 'track' resource.id %}" target="_blank">Track</a>
+                <a class="btn btn-block btn-success" href="{% url 'track' resource.id %}" target="_blank">Track<img alt="help text as title" title="{{ all_help.6.answer }}" src="{% static 'images/help.png' %}"/></a>
                 <!-- todo: "make this page better" a class="btn btn-block btn-info" href="/resource/{{ resource.id }}/versions">View Versions</a-->
                 {% if owned %}
                     <a class="btn btn-block btn-danger" href="{% url 'edit_resource' resource.id %}">Edit</a>
@@ -131,7 +131,7 @@
         </div>
         
         <div class="hero-unit" id="pack">
-            <h3>Packs<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></h3>
+            <h3>Packs<img alt="help text as title" title="{{ all_help.1.answer }}" src="{% static 'images/help.png' %}"/></h3>
             {% if partofpacks %}
                 <div class="table-responsive">
                     <table id="Packs" class="table table-striped table-bordered" cellspacing="0" width="100%">
