--- a/django_project/static/css/treasure.css
+++ b/django_project/static/css/treasure.css
@@ -94,9 +94,18 @@ a.btn {
     padding-right:1;
 }
 
+.bulletback{
+  list-style:initial;
+}
+
 @media (min-width: 980px) {
 @@ -131,7 +131,7 @@
   .navbar-fixed-bottom .container {
     width: 1170px;
     width: 980px;
   }
+}
+
+.dropdown-backdrop {
+    position: static;
+}
