Rating Bot Prevention, Measures Replaced
Rating Captcha #134 ,
Measures replaced with actual #133

--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -197,9 +197,9 @@
                     <thead>
                         <tr>
                             <th>Teacher</th>
-                            <th>Measure1</th>
-                            <th>Measure2</th>
-                            <th>Measure3</th>
+                            <th>Engagement</th>
+                            <th>Effectiveness</th>
+                            <th>Ease of Use</th>
                             <th>Comment</th>
                         </tr>
                     </thead>
