--- a/django_project/templates/treasure/pack.html
+++ b/django_project/templates/treasure/pack.html
@@ -59,7 +59,8 @@
         {% endif %}
         </ul>
         <hr>
-        
+        {% if not rating_exists%}
+        <a class="btn btn-block btn-primary" href="{% url 'ratePack' pack.id %}">Rate</a>{% endif %}
         {% if owned %}
             <!--a class="btn btn-block btn-primary" href="">Download Pack?</a-->
             <a class="btn btn-block btn-danger" href="{% url 'edit_pack' pack.id %}">Edit</a>
@@ -98,9 +99,77 @@
 		        </div>
 		    </div> <!-- close body -->
         </div> <!-- close panel -->
+</div>
+    <div class="hero-unit" id="want2talk">
+        <h3>Discuss {{pack.name}}<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></h3>
+        {% if want2talk %}
+        <div class="table-responsive">
+            <table id="wanttotalk" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                <thead>
+                    <tr>
+                        <th>Teacher</th>
+                        <!--<th>Comment</th>-->
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for record in want2talk %}
+                        <tr class="teacherLabel">
+                            <td>{{record.teacher}}. {% ifequal record.teacher user_teacher%}<a href="{% url 'talkPack' pack.id 'no' %}">Remove</a>{%endifequal%}</td>
+                            <!--<td>{{record.comment}}</td>-->
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        {% if not iWant2Talk %}<a class="btn btn-primary pull-right" href="{% url 'talkPack' pack.id 'yes' %}">I am happy to talk</a>{% endif %}
+        {% else %}
+        <p><a href="{% url 'talkPack' pack.id 'yes' %}">I am happy to discuss about it.</a></p>
+        {% endif %}
+    </div>
+
+    
+    <div class="hero-unit" id="rating">
+    {% if feedback %}
+        <h3>Feedback<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></h3>
+        <div class="table-responsive">
+            <table id="feedback" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                <thead>
+                    <tr>
+                        <th>Teacher</th>
+                        <th>Measure1</th>
+                        <th>Measure2</th>
+                        <th>Measure3</th>
+                        <th>Comment</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for feed in feedback %}
+                        <tr class="teacherLabel">
+                            <td>{{feed.teacher}}</td>
+                            <td>{{feed.measure1}}</td>
+                            <td>{{feed.measure2}}</td>
+                            <td>{{feed.measure3}}</td>
+                            <td>{{feed.comment}}</td>
+                        </tr>
+                    {% endfor %}
+                    {% if not rating_exists %}
+                    <tr class="teacherLabel">
+                        <td><a href="{% url 'ratePack' pack.id %}">Rate Resource</a></td>
+                    </tr>
+                    {% endif %}
+                </tbody>
+             </table>
+        </div>
+    {% else %}
+        <p>There is no feedback for pack {{pack_name}} yet.
+        <a href="{% url 'ratePack' pack.id %}">Be the first!</a>
+        </p>
+    {% endif %}
+    </div>
+        
     {% else %}
         <h4>There are no resources in this pack.</h4>
-        <a href="{% url 'resources' %}">Return to Resources</a>
+        <a href="{% url 'packs' %}">Return to Packs</a>
     {% endif %}
     
 </div>
