--- a/django_project/templates/treasure/user_home.html
+++ b/django_project/templates/treasure/user_home.html
@@ -194,6 +194,74 @@
     {% endif %}
 </div> <!-- close panel -->
 
+{% if MyPacks %}
+<div id="mytalk" class="hero-unit panel panel-default">
+    {% if want2talkMyPacks %}
+    <div class="panel-heading clearfix">
+        <h4>People Willing to talk about my Packs<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
+    </div>
+        <div class="panel-body">
+            <div class="table-responsive">
+                <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Pack Name</th>
+                            <th>Author</th>
+                            <th>Summary</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for record in want2talkMine %}
+                            <tr class="studentLabel">
+                                <td><a href="{% url 'resource_view' record.resource.id %}">{{record.pack.name}}</a></td>
+                                <td>{{record.teacher}}</td>
+                                <td>{{record.comment}}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                 </table>
+            </div>
+        </div> <!-- close body -->
+    {% else %}
+        <p>Nobody has declared interest in discussing your resources yet.</p>
+    {% endif %}
+    </div> <!-- close panel -->
+{% endif %}
+
+<div id="mytalk" class="hero-unit panel panel-default">
+    {% if want2talkPack %}
+    <div class="panel-heading clearfix">
+        <h4>Packs I am happy to talk about<img alt="help text as title" title="{{ all_help.0.answer }}" src="{% static 'images/help.png' %}"/></a></h4>
+    </div>
+        <div class="panel-body">
+            <div class="table-responsive">
+                <table id="Happy2Talk" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Pack Name</th>
+                            <th>Author</th>
+                            <th>Status</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for record in want2talkPack %}
+                            <tr class="studentLabel">
+                                <td><a href="{% url 'pack' record.pack.id %}">{{ record.pack.name }}</a>. <a href="{% url 'talkPack' record.pack.id 'no' %}">Remove</a></td>
+                                <td>{{ record.pack.author }}</td>
+                                <td>{% ifequal record.disable 0 %}Active{% else%}Inactive{% endifequal%}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                 </table>
+            </div>
+        </div> <!-- close body -->
+        <a class="btn btn-primary pull-right" href="{% url 'talk_hide_pack' 'no' %}">Deactivate All</a>
+        <a class="btn btn-primary pull-right" href="{% url 'talk_hide_pack' 'yes' %}">Activate All</a>
+    {% else %}
+        <p>You have not declared interest in discussing any packs.<a href="{% url 'explore' %}">Explore packs</a>?</p>
+    {% endif %}
+</div> <!-- close panel -->
+
 <!-- script for tables -->
 <script type="text/javascript">
 $(document).ready(function(){
