Track: Adding Resource name
Adding resource name in track page

--- a/django_project/templates/treasure/track.html
+++ b/django_project/templates/treasure/track.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block body_block %}
+<h4>{{this_resource.name}} Resource Activity</h4>
 <div style="height:480px; width:640px">
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDudWkR_tpJ06lIarBZm3qIngNAae1RXNw&scale=1&signed_in=true"></script>
 
