Adding a proper view for evolutions of a resource.
I hope it loks okay, the styles have all broken on my machine...

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -110,7 +110,7 @@
                     		<li><a href="{% url 'help' %}" class="skel-layers-ignoreHref"><span>Help</span></a></li>
                     		{% if user.is_superuser %}
                     		<li><br></li>
-                    		<li><a href="{% url 'review_list' %}" class="skel-layers-ignoreHref"><span>Verifications <span class="badge small-notification">{{ admin_notifications }}</span></span></a></li>
+                    		<li><a href="{% url 'review_list' %}" class="skel-layers-ignoreHref"><span>Verifications {% if admin_notifications > 0 %}<span class="badge small-notification">{{ admin_notifications }}</span>{% endif %}</span></a></li>
                     		{% endif %}
       							{% else %}
       							    <li><br></li>
